# KenChat

./: .gitignore  CMakeLists.txt  README.md
chatwebclient/: ChatClient.sln
chatwebclient/ChatClient/: ChatClient.csproj  ChatLobby.aspx  ChatLobby.aspx.cs  ChatLobby.aspx.designer.cs  Global.asax  Global.asax.cs  Login.aspx  Login.aspx.cs  Login.aspx.designer.cs  Register.aspx  Register.aspx.cs  Register.aspx.designer.cs  Site.Master  Site.Master.cs  Site.Master.designer.cs  Site.Mobile.Master  Site.Mobile.Master.cs  Site.Mobile.Master.designer.cs  ViewSwitcher.ascx  ViewSwitcher.ascx.cs  ViewSwitcher.ascx.designer.cs  Web.config  packages.config
chatwebclient/ChatClient/App_Start/: BundleConfig.cs  RouteConfig.cs
chatwebclient/ChatClient/Properties/: AssemblyInfo.cs
include/: http.hpp  public.hpp
include/redis/: redis.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/: http.cpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/: Mysql.sql
test/TestJson/: TestJson  TestJson.cpp
test/TestMuduo/: CMakeLists.txt  muduo_server.cpp
